fix: :bug: remove extra margin

--- a/static/css/_landing-binary.scss
+++ b/static/css/_landing-binary.scss
@@ -863,28 +863,18 @@ $header-color : #333333;
 
   &-container {
     background-color: $white;
-    padding: 24px 16px;
+    padding: 8px;
     display: flex;
     flex-direction: column;
     align-items: stretch;
     gap: 8px;
-    border-radius: 8px;
-    min-width: 176px;
     position: absolute;
     z-index: 9999;
     top: 40px;
     right: 0;
     transition: all 200ms;
-
-    &:before {
-      content: ' ';
-      position: absolute;
-      right: 30px;
-      border: 5px solid transparent;
-      border-right-color: $white;;
-      top: -10px;
-      rotate: 90deg;
-    }
+    box-shadow: 0px 20px 24px -4px rgba(14, 14, 14, 0.08), 0px 8px 8px -4px rgba(14, 14, 14, 0.03);
+    border-radius: 8px;
 
     &.open {
       opacity: 1;
@@ -903,22 +893,24 @@ $header-color : #333333;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    padding: 14px 16px;
+    padding: 8px;
     cursor: pointer;
+    border-radius: 4px;
     transition: all 200ms;
 
     &:hover {
-      scale: 1.05;
+      background-color: #F0F5F8;
     }
   }
 
   &-item-name {
     font: 400 14px $font-IBM;
     color: #333333;
-    margin: 0 0 0 8px !important;
+    margin: 0 !important;
 
     &.selected {
       font: 700 14px $font-IBM;
+      color: $brand-red;
     }
   }
 }
